Fix shelf z-index for different shelf heights

--- a/assets/main.css
+++ b/assets/main.css
@@ -41,7 +41,18 @@ html {
   background: url("textures/wood2-h-cropped.png");
   background-size: contain;
   box-shadow: inset 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+#shelfA::after {
   z-index: 1000;
+}
+
+#shelfB::after {
+  z-index: 500;
+}
+
+#shelfC::after {
+  z-index: 200;
 }
 
 .shelf-section {
